src/test/deca/syntax/valid/LE/new.deca
// Historique:
//    cree le 19/01/2022

class C1 {
    int a ;
}

{
    C1 var = new C1 () ;
}